; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv50/extr_wndwc37e.c_wndwc37e_ntfy_clr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv50/extr_wndwc37e.c_wndwc37e_ntfy_clr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nv50_wndw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wndwc37e_ntfy_clr(%struct.nv50_wndw* %0) #0 {
  %2 = alloca %struct.nv50_wndw*, align 8
  %3 = alloca i32*, align 8
  store %struct.nv50_wndw* %0, %struct.nv50_wndw** %2, align 8
  %4 = load %struct.nv50_wndw*, %struct.nv50_wndw** %2, align 8
  %5 = getelementptr inbounds %struct.nv50_wndw, %struct.nv50_wndw* %4, i32 0, i32 0
  %6 = call i32* @evo_wait(i32* %5, i32 2)
  store i32* %6, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @evo_mthd(i32* %9, i32 540, i32 1)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @evo_data(i32* %11, i32 0)
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.nv50_wndw*, %struct.nv50_wndw** %2, align 8
  %15 = getelementptr inbounds %struct.nv50_wndw, %struct.nv50_wndw* %14, i32 0, i32 0
  %16 = call i32 @evo_kick(i32* %13, i32* %15)
  br label %17

17:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32* @evo_wait(i32*, i32) #1

declare dso_local i32 @evo_mthd(i32*, i32, i32) #1

declare dso_local i32 @evo_data(i32*, i32) #1

declare dso_local i32 @evo_kick(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
